Assertion has been added to Susa
This helps debugging the code and cleans up
the console output. The assertions are suppressed
when SUSA_NDEBUG is defined.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,9 +1,10 @@
-CC = clang
-CXX = clang++
+CC = gcc
+CXX = g++
 CFLAGXX = -Wall -m64 -I../inc -L../lib
 LIB = -lsusa
 
 all :
 	@echo . compile
-	$(CXX) $(CFLAGXX) $(file).cpp -o $(file) -O $(LIB) -O3
+	$(CXX) $(CFLAGXX) $(file).cpp -o $(file) $(LIB) -O3
 
+# make -f Makefile file="simple_matrix"
