create unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,7 @@ set(SRC_FILES src/rng.cpp
               src/utility.cpp)
 
 add_library(susa ${SRC_FILES})
+
+add_subdirectory (test)
+enable_testing ()
+add_test (NAME check COMMAND ./test/check)
