refactor the convolutional code class
matrix output stream has been changed to print
uint8_t and int8_t types correctly using ADL.
three test cases for the encoder has been made.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set (SRC_FILES src/rng.cpp
                src/mt.cpp
                src/sets.cpp
                src/base.cpp
-               src/convolutional.cpp
+               src/ccode.cpp
                src/matrix.cpp
                src/modulation.cpp
                src/rrcosine.cpp
