codecov.io : the very first step to get the coverage badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ before_script:
   - cmake ..
 
 script: make && make test
+
+after_success:
+- bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
