--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,19 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -pedantic")
 
+option(CODE_COVERAGE "Enable coverage reporting" OFF)
+if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  # Add required flags (GCC & LLVM/Clang)
+  add_compile_options(
+    -O0        # no optimization
+    -g         # generate debug info
+    --coverage # sets all required flags
+  )
+
+  link_libraries(--coverage)
+
+endif(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+
 
 include_directories (inc)
 set (SRC_FILES src/rng.cpp
