--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,22 @@
 language: cpp
 dist: focal
 
+addons:
+  apt:
+    packages: lcov
+
+cache:
+  - directories:
+    - $HOME/.cache
+
+install:
+  - mkdir -p $HOME/.cache
+
 compiler:
   - gcc
   - clang
 
 before_script:
-
   - mkdir build
   - cd build
   - cmake .. -DCODE_COVERAGE=ON
@@ -14,4 +24,7 @@ before_script:
 script: make && make test
 
 after_success:
-- bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+  - lcov --directory . --capture --output-file coverage.info
+  - lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
+  - lcov --list coverage.info
+  - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
